--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										</header>
 										<p>Born in Yorkshire, I studied at Reigate School of Art graduating with a BA (Hons). With a strong passion for the outdoors and wildlife these form the subjects of most of my paintings. Initially, I painted in watercolour but later produced artwork using oils and pastel and more recently in mixed media.</p>
 
-<p>My work has been exhibited widely at galleries in London and regionally as well as in France, Germany and America. My paintings have been published as greetings cards and fine art prints and I have illustrated a number of books and magazines.</p>
+<p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards and fine art prints and I have illustrated a number of books and magazines.</p>
 
 <p>One of my largest commissions was to design a large permanent wall mural for the reception area to the Ashford International railway station that encompasses a countryside theme to it.<br />
 
