--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards and fine art prints and I have illustrated a number of books and magazines.</p>
 
-										<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist to depict railway scenes past and present to the general public. One of my largest commissions to date was to design a large permanent wall mural for the reception area to the Ashford International railway station that encompassed a countryside theme.</p>
+										<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist like myself to depict railway scenes past and present to the general public. One of my largest commissions to date was a large permanent wall mural for the reception area of Ashford International railway station that encompassed a countryside theme.</p>
 
 <p>As well as painting English landscapes and nature, I have travelled through and painted sceneries from France. Hope you enjoy my art as much as I enoyed painting them</p>
 										<!-- <ul class="actions">
