--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 											<h1>About me</h1>
 											<!-- <p>A free and fully responsive site template</p> -->
 										</header>
-										<p>Born in Yorkshire, I studied at Reigate School of Art graduating with a BA (Hons). With a strong passion for the outdoors and wildlife these form the subjects of most of my paintings. Initially, I painted in watercolour but later produced artwork using oils and pastel and more recently in mixed media.</p>
+										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). Having grown up with a strong passion for the outdoors and wildlife these form the subjects of most of my paintings. Initially, I painted in watercolour but later produced artwork using oils and pastel and more recently in mixed media.</p>
 
-<p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards and fine art prints and I have illustrated a number of books and magazines.</p>
+<p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
 
 										<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist like myself to depict railway scenes past and present to the general public. One of my largest commissions to date was a large permanent wall mural for the reception area of Ashford International railway station that encompassed a countryside theme.</p>
 
