--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 										<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist like myself to depict and publicly present railway scenes of the past and present. One of my largest commissions to date was a large permanent wall mural for the reception area of Ashford International railway station that encompassed a countryside theme of the local area.</p>
 
-<p>As well as painting English landscapes and nature, I have travelled through and painted sceneries from France. Hope you enjoy my artwork as much as I enoyed painting them. Please get in contact if you would like to leave a comment or to enquire about purchasing one of my paintings.</p>
+<p>As well as painting English landscapes and nature, I have travelled through and painted sceneries of France. Hope you enjoy my artwork as much as I enoyed painting them. Please get in contact if you would like to leave a comment or to enquire about purchasing one of my paintings.</p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
