--- a/galleries/gallery1.html
+++ b/galleries/gallery1.html
@@ -41,51 +41,120 @@
 
 								<section id="two">
 									<header class="major">
-										<h2>Gallery 1</h2>
+										<h2>Wildlife Gallery</h2>
 									</header>
 									<div class="posts">
+
 										<article class="work-item">
-											<a href="gallery2/01.jpg" class="image"><img src="gallery1/01.jpg" alt="" /></a>
+											<a href="gallery1/01.jpg" class="image"><img src="gallery1/01.jpg" alt="" /></a>
 											<h3>Hare</h3>
-											<p>Oil + Info about painting</p>
+											<p>Oil</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/02.jpg" class="image"><img src="gallery1/02.jpg" alt="" /></a>
+											<h3>Mallard duck rising (Book cover)</h3>
+											<p>Watercolour</p>
 
 										</article>
 										<article class="work-item">
-											<a href="gallery2/02.jpg" class="image"><img src="gallery1/02.jpg" alt="" /></a>
-											<h3>Stream</h3>
-											<p>Pastel + Info about painting</p>
+											<a href="gallery1/03.jpg" class="image"><img src="gallery1/03.jpg" alt="" /></a>
+											<h3>Young Roe Deer Buck</h3>
+											<p>Pen and Ink</p>
 
 										</article>
 										<article class="work-item">
-											<a href="gallery2/03.jpg" class="image"><img src="gallery1/03.jpg" alt="" /></a>
-											<h3>Fox In Snow</h3>
-											<p>Oil + Info about painting</p>
+											<a href="gallery1/04.jpg" class="image"><img src="gallery1/04.jpg" alt="" /></a>
+											<h3>My late dachshund Bobby</h3>
+											<p>Coloured Crayon</p>
 
 										</article>
 										<article class="work-item">
-											<a href="gallery2/04.jpg" class="image"><img src="gallery1/04.jpg" alt="" /></a>
-											<h3>Clouds Over The Monument</h3>
-											<p>Acrylic + Info about painting</p>
+											<a href="gallery1/05.jpg" class="image"><img src="gallery1/05.jpg" alt="" /></a>
+											<h3>Fox Head Study</h3>
+											<p>Watercolour</p>
 
 										</article>
 										<article class="work-item">
-											<a href="gallery2/05.jpg" class="image"><img src="gallery1/05.jpg" alt="" /></a>
+											<a href="gallery1/06.jpg" class="image"><img src="gallery1/06.jpg" alt="" /></a>
+											<h3>Hen Mallard Head Study</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/07.jpg" class="image"><img src="gallery1/07.jpg" alt="" /></a>
+											<h3>Trout in Shallows</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/08.jpg" class="image"><img src="gallery1/08.jpg" alt="" /></a>
+											<h3>Old Bull</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/09.jpg" class="image"><img src="gallery1/09.jpg" alt="" /></a>
+											<h3>German Pointer Head Study</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/10.jpg" class="image"><img src="gallery1/10.jpg" alt="" /></a>
+											<h3>Kingfisher</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/11.jpg" class="image"><img src="gallery1/11.jpg" alt="" /></a>
+											<h3>Fox in the Snow</h3>
+											<p>Watercolour</p>
+
+										</article>
+
+										<article class="work-item">
+											<a href="gallery1/12.jpg" class="image"><img src="gallery1/12.jpg" alt="" /></a>
+											<h3>Evening Flight of Woodcock</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/14.jpg" class="image"><img src="gallery1/14.jpg" alt="" /></a>
+											<h3>Wild Boar head study</h3>
+											<p>Graphite Pencil</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/15.jpg" class="image"><img src="gallery1/15.jpg" alt="" /></a>
+											<h3>cock Pheasant (Magazine Cover)</h3>
+											<p></p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/16.jpg" class="image"><img src="gallery1/16.jpg" alt="" /></a>
+											<h3>Resting cattle</h3>
+											<p>Acrylics</p>
+										</article>
+
+										<article class="work-item">
+											<a href="gallery1/17.jpg" class="image"><img src="gallery1/17.jpg" alt="" /></a>
+											<h3>Fox returning home with supper</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/13.jpg" class="image"><img src="gallery1/13.jpg" alt="" /></a>
+											<h3>Friends Dog</h3>
+											<p>Watercolour</p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery1/18.jpg" class="image"><img src="gallery1/18.jpg" alt="" /></a>
 											<h3>Horse</h3>
-											<p>Oil + Info about painting</p>
+											<p>Oil</p>
 
 										</article>
-										<article class="work-item">
-											<a href="gallery2/06.jpg" class="image"><img src="gallery1/06.jpg" alt="" /></a>
-											<h3>River Landscape</h3>
-											<p>Watercolour + Info about painting</p>
 
-										</article>
-										<article class="work-item">
-											<a href="gallery2/07.jpg" class="image"><img src="gallery1/07.jpg" alt="" /></a>
-											<h3>Road Landscape</h3>
-											<p>Watercolour + Info about painting</p>
 
-										</article>
 									</div>
 								</section>
 
@@ -113,10 +182,10 @@
 										<li>
 											<span class="opener">Galleries</span>
 											<ul>
-												<li><a href="gallery1.html">Gallery 1</a></li>
-												<li><a href="gallery2.html">Gallery 2</a></li>
-												<li><a href="gallery3.html">Gallery 3</a></li>
-												<li><a href="gallery4.html">Gallery 4</a></li>
+												<li><a href="gallery1.html">Wildlife Gallery</a></li>
+												<li><a href="gallery2.html">Landscape Gallery</a></li>
+												<li><a href="gallery3.html">Pastels Gallery</a></li>
+												<li><a href="gallery4.html">Railway Gallery</a></li>
 												<li><a href="gallery5.html">Gallery 5</a></li>
 												<li><a href="gallery6.html">Gallery 6</a></li>
 											</ul>
