--- a/galleries/gallery3.html
+++ b/galleries/gallery3.html
@@ -39,49 +39,73 @@
 
 								<section id="two">
 									<header class="major">
-										<h2>Gallery 3</h2>
+										<h2>Pastels Gallery</h2>
 									</header>
 									<div class="posts">
 										<article class="work-item">
 											<a href="gallery3/01.jpg" class="image"><img src="gallery3/01.jpg" alt="" /></a>
-											<h3>Hare</h3>
-											<p>Oil + Info about painting</p>
+											<h3>Fishing boats moored at Padstow</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery3/02.jpg" class="image"><img src="gallery3/02.jpg" alt="" /></a>
-											<h3>Stream</h3>
-											<p>Pastel + Info about painting</p>
+											<h3>Departing Mevagissey Harbour</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery3/03.jpg" class="image"><img src="gallery3/03.jpg" alt="" /></a>
-											<h3>Fox In Snow</h3>
-											<p>Oil + Info about painting</p>
+											<h3>Moored boats Mevagissey</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery3/04.jpg" class="image"><img src="gallery3/04.jpg" alt="" /></a>
-											<h3>Clouds Over The Monument</h3>
-											<p>Acrylic + Info about painting</p>
+											<h3>Polperro Harbour</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery3/05.jpg" class="image"><img src="gallery3/05.jpg" alt="" /></a>
-											<h3>Horse</h3>
-											<p>Oil + Info about painting</p>
+											<h3>Fishing boat Bono Brittany</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery3/06.jpg" class="image"><img src="gallery3/06.jpg" alt="" /></a>
-											<h3>River Landscape</h3>
-											<p>Watercolour + Info about painting</p>
+											<h3>Tide out Bono Brittany</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery3/07.jpg" class="image"><img src="gallery3/07.jpg" alt="" /></a>
-											<h3>Road Landscape</h3>
-											<p>Watercolour + Info about painting</p>
+											<h3>Village of Sanvensa (South West France)</h3>
+											<p></p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery3/08.jpg" class="image"><img src="gallery3/08.jpg" alt="" /></a>
+											<h3>West Country river</h3>
+											<p></p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery3/09.jpg" class="image"><img src="gallery3/09.jpg" alt="" /></a>
+											<h3>Hill top castle of Najac south west France</h3>
+											<p></p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery3/10.jpg" class="image"><img src="gallery3/10.jpg" alt="" /></a>
+											<h3>Country lane</h3>
+											<p></p>
+
+										</article>
+										<article class="work-item">
+											<a href="gallery3/11.jpg" class="image"><img src="gallery3/11.jpg" alt="" /></a>
+											<h3>Moored yachts Brittany</h3>
+											<p></p>
 
 										</article>
 									</div>
@@ -111,10 +135,10 @@
 										<li>
 											<span class="opener">Galleries</span>
 											<ul>
-												<li><a href="gallery1.html">Gallery 1</a></li>
-												<li><a href="gallery2.html">Gallery 2</a></li>
-												<li><a href="gallery3.html">Gallery 3</a></li>
-												<li><a href="gallery4.html">Gallery 4</a></li>
+												<li><a href="gallery1.html">Wildlife Gallery</a></li>
+												<li><a href="gallery2.html">Landscape Gallery</a></li>
+												<li><a href="gallery3.html">Pastels Gallery</a></li>
+												<li><a href="gallery4.html">Railway Gallery</a></li>
 												<li><a href="gallery5.html">Gallery 5</a></li>
 												<li><a href="gallery6.html">Gallery 6</a></li>
 											</ul>
