--- a/galleries/gallery4.html
+++ b/galleries/gallery4.html
@@ -39,52 +39,21 @@
 
 								<section id="two">
 									<header class="major">
-										<h2>Gallery 4</h2>
+										<h2>Railway Gallery</h2>
 									</header>
 									<div class="posts">
 										<article class="work-item">
 											<a href="gallery4/01.jpg" class="image"><img src="gallery4/01.jpg" alt="" /></a>
-											<h3>Hare</h3>
-											<p>Oil + Info about painting</p>
+											<h3>Steam train</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery4/02.jpg" class="image"><img src="gallery4/02.jpg" alt="" /></a>
-											<h3>Stream</h3>
-											<p>Pastel + Info about painting</p>
+											<h3>Steam train</h3>
+											<p></p>
 
-										</article>
-										<article class="work-item">
-											<a href="gallery4/03.jpg" class="image"><img src="gallery4/03.jpg" alt="" /></a>
-											<h3>Fox In Snow</h3>
-											<p>Oil + Info about painting</p>
-
-										</article>
-										<article class="work-item">
-											<a href="gallery4/04.jpg" class="image"><img src="gallery4/04.jpg" alt="" /></a>
-											<h3>Clouds Over The Monument</h3>
-											<p>Acrylic + Info about painting</p>
-
-										</article>
-										<article class="work-item">
-											<a href="gallery4/05.jpg" class="image"><img src="gallery4/05.jpg" alt="" /></a>
-											<h3>Horse</h3>
-											<p>Oil + Info about painting</p>
-
-										</article>
-										<article class="work-item">
-											<a href="gallery4/06.jpg" class="image"><img src="gallery4/06.jpg" alt="" /></a>
-											<h3>River Landscape</h3>
-											<p>Watercolour + Info about painting</p>
-
-										</article>
-										<article class="work-item">
-											<a href="gallery4/07.jpg" class="image"><img src="gallery4/07.jpg" alt="" /></a>
-											<h3>Road Landscape</h3>
-											<p>Watercolour + Info about painting</p>
-
-										</article>
-									</div>
+	
 								</section>
 
 						</div>
@@ -111,10 +80,10 @@
 										<li>
 											<span class="opener">Galleries</span>
 											<ul>
-												<li><a href="gallery1.html">Gallery 1</a></li>
-												<li><a href="gallery2.html">Gallery 2</a></li>
-												<li><a href="gallery3.html">Gallery 3</a></li>
-												<li><a href="gallery4.html">Gallery 4</a></li>
+												<li><a href="gallery1.html">Wildlife Gallery</a></li>
+												<li><a href="gallery2.html">Landscape Gallery</a></li>
+												<li><a href="gallery3.html">Pastels Gallery</a></li>
+												<li><a href="gallery4.html">Railway Gallery</a></li>
 												<li><a href="gallery5.html">Gallery 5</a></li>
 												<li><a href="gallery6.html">Gallery 6</a></li>
 											</ul>
