--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 											<h1>About me</h1>
 											<!-- <p>A free and fully responsive site template</p> -->
 										</header>
-										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). Having grown up passionate about the outdoors and wildlife these form the subjects of most of my paintings. I start out using watercolour but have later produced artwork using oils and pastel and more recently in mixed media.</p>
+										<p>Born in Yorkshire, I studied at Reigate School of Art graduating with a BA (Hons). With a strong passion for the outdoors and wildlife these form the subjects of most of my paintings. Initially, I painted in watercolour but later produced artwork using oils and pastel and more recently in mixed media.</p>
 
-<p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
+<p>My work has been exhibited widely at galleries in London and regionally as well as in France, Germany and America. My paintings have been published as greetings cards and fine art prints and I have illustrated a number of books and magazines.</p>
 
-										<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist like myself to depict and publicly present railway scenes of the past and present. One of my largest commissions to date was a large permanent wall mural for the reception area of Ashford International railway station that encompassed a countryside theme of the local area.</p>
+<p>One of my largest commissions was to design a large permanent wall mural for the reception area to the Ashford International railway station that encompasses a countryside theme to it.<br />
 
-<p>As well as English landscapes and nature, I have travelled through and painted sceneries of France. Hope you enjoy my artwork as much as I enoyed painting them. Please get in contact if you would like to leave a comment or to enquire about purchasing one of my paintings.</p>
+<p>As well as painting English landscape and the nature that I observe within it, I have travelled through and painted the sceneries from France.</p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
@@ -65,32 +65,32 @@
 									<div class="posts">
 										<article>
 											<a href="galleries/gallery1.html" class="image"><img src="images/01.jpg" alt="" /></a>
-											<h3>Gallery 1</h3>
-											<p>Info about Gallery</p>
+											<h3>Wildlife Gallery</h3>
+											<p>Wild animals and pets painted in a range of different mediums. </p>
 											<ul class="actions">
 												<li><a href="galleries/gallery1.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="galleries/gallery2.html" class="image"><img src="images/02.jpg" alt="" /></a>
-											<h3>Gallery 2</h3>
-											<p>Info about Gallery</p>
+											<h3>Landscape Gallery</h3>
+											<p>Sceneries of the UK and France.</p>
 											<ul class="actions">
 												<li><a href="galleries/gallery2.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="galleries/gallery3.html" class="image"><img src="images/03.jpg" alt="" /></a>
-											<h3>Gallery 3</h3>
-											<p>Info about Gallery</p>
+											<h3>Pastels Gallery</h3>
+											<p>Collection of artwork produced using pastels.</p>
 											<ul class="actions">
 												<li><a href="galleries/gallery3.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="galleries/gallery4.html" class="image"><img src="images/04.jpg" alt="" /></a>
-											<h3>Gallery 4</h3>
-											<p>Info about Gallery</p>
+											<h3>Railway Gallery</h3>
+											<p>Paintings of steam trains.</p>
 											<ul class="actions">
 												<li><a href="galleries/gallery4.html" class="button">More</a></li>
 											</ul>
@@ -138,12 +138,12 @@
 										<li>
 											<span class="opener">Galleries</span>
 											<ul>
-												<li><a href="galleries/gallery1.html">Gallery 1</a></li>
-												<li><a href="galleries/gallery2.html">Gallery 2</a></li>
-												<li><a href="galleries/gallery3.html">Gallery 3</a></li>
-												<li><a href="galleries/gallery4.html">Gallery 4</a></li>
-												<li><a href="galleries/gallery5.html">Gallery 5</a></li>
-												<li><a href="galleries/gallery6.html">Gallery 6</a></li>
+												<li><a href="galleries/gallery1.html">Wildlife Gallery</a></li>
+												<li><a href="galleries/gallery2.html">Landscape Gallery</a></li>
+												<li><a href="galleries/gallery3.html">Pastels Gallery</a></li>
+												<li><a href="galleries/gallery4.html">Railway Gallery</a></li>
+												<li><a href="galleries/galleries/gallery5.html">Gallery 5</a></li>
+												<li><a href="galleries/galleries/gallery6.html">Gallery 6</a></li>
 											</ul>
 										</li>
 									</ul>
