--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<header class="major">
 										<h2>Galleries</h2>
 									</header>
-									<h2> Press on image or link to view gallery of paintings </h2>
+									<h2> Press on image or link to view gallery</h2>
 									<div class="posts">
 										<article>
 											<a href="galleries/gallery1.html" class="image"><img src="images/01.jpg" alt="" /></a>
