--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 											<h1>About me</h1>
 											<!-- <p>A free and fully responsive site template</p> -->
 										</header>
-										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). Having grown up passionate about the outdoors and wildlife these form the subjects of most of my paintings. I start out using watercolour but have later produced artwork using oils and pastel and more recently in mixed media.</p>
+										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). As someone that is passionate for the outdoors and wildlife these form the subjects of most of my paintings. At the beginning of my career I painted in watercolour but have later produced artwork using oils and pastel and more recently in mixed media.</p>
 
 <p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
 
