--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 										</header>
 										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). As someone that is passionate for the outdoors and wildlife these form the subjects of most of my paintings. At the beginning of my career I painted in watercolour but have later produced artwork using oils and pastel and more recently in mixed media.</p>
 
-<p>My work has been exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
+<p>My reputation as a lanscape and wildlife artist has led to my work being exhibited widely at galleries in London and regionally across the UK as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
 
-<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist like myself to depict and publicly present railway scenes of the past and present. One of my largest commissions to date was a large permanent wall mural for the reception area of Ashford International railway station that encompassed a countryside theme of the local area.</p>
+<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, it has allowed artist like myself to depict and publicise railway scenes of the past and present. This led to one of my largest commissions to date was a large permanent wall mural for the reception area of Ashford International railway station that encompassed a countryside theme of the local area.</p>
 
 <p>As well as English landscapes and nature, I have travelled through and painted sceneries of France. Hope you enjoy my artwork as much as I enoyed painting them. Please get in contact if you would like to leave a comment or to enquire about purchasing one of my paintings.</p>
 										<!-- <ul class="actions">
