--- a/galleries/gallery1.html
+++ b/galleries/gallery1.html
@@ -125,14 +125,14 @@
 										</article>
 										<article class="work-item">
 											<a href="gallery1/15.jpg" class="image"><img src="gallery1/15.jpg" alt="" /></a>
-											<h3>cock Pheasant (Magazine Cover)</h3>
-											<p></p>
+											<h3>Resting cattle cock</h3>
+											<p>Acrylics</p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery1/16.jpg" class="image"><img src="gallery1/16.jpg" alt="" /></a>
-											<h3>Resting cattle</h3>
-											<p>Acrylics</p>
+											<h3>Pheasant (Magazine Cover)</h3>
+											<p></p>
 										</article>
 
 										<article class="work-item">
