--- a/galleries/gallery1.html
+++ b/galleries/gallery1.html
@@ -119,25 +119,25 @@
 										</article>
 										<article class="work-item">
 											<a href="gallery1/14.jpg" class="image"><img src="gallery1/14.jpg" alt="" /></a>
-											<h3>Friends Dog</h3>
-											<p>Watercolour</p>
+											<h3>Cock Pheasant (Magazine Cover)</h3>
+											<p></p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery1/15.jpg" class="image"><img src="gallery1/15.jpg" alt="" /></a>
-											<h3>Resting cattle cock</h3>
+											<h3>Resting cattle</h3>
 											<p>Acrylics</p>
 
 										</article>
 										<article class="work-item">
 											<a href="gallery1/16.jpg" class="image"><img src="gallery1/16.jpg" alt="" /></a>
-											<h3>Pheasant (Magazine Cover)</h3>
-											<p></p>
+											<h3>Fox returning home with supper</h3>
+											<p>Watercolour</p>
 										</article>
 
 										<article class="work-item">
 											<a href="gallery1/17.jpg" class="image"><img src="gallery1/17.jpg" alt="" /></a>
-											<h3>Fox returning home with supper</h3>
+											<h3>Friends Dog</h3>
 											<p>Watercolour</p>
 
 										</article>
