--- a/galleries/gallery1.html
+++ b/galleries/gallery1.html
@@ -137,7 +137,7 @@
 
 										<article class="work-item">
 											<a href="gallery1/17.jpg" class="image"><img src="gallery1/17.jpg" alt="" /></a>
-											<h3>Friends Dog</h3>
+											<h3>Friends Dog<</h3>
 											<p>Watercolour</p>
 
 										</article>
@@ -153,7 +153,97 @@
 											<p>Oil</p>
 
 										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/19.jpg" class="image"><img src="gallery1/19.jpg" alt="" /></a>
+											<h3>Snipe</h3>
+											<p></p>
 
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/20.jpg" class="image"><img src="gallery1/20.jpg" alt="" /></a>
+											<h3>Guillemots</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/21.jpg" class="image"><img src="gallery1/21.jpg" alt="" /></a>
+											<h3>Roe buck in Autumn velvet</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/22.jpg" class="image"><img src="gallery1/22.jpg" alt="" /></a>
+											<h3>Cock Pheasant</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/23.jpg" class="image"><img src="gallery1/23.jpg" alt="" /></a>
+											<h3>Goshawk</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/24.jpg" class="image"><img src="gallery1/24.jpg" alt="" /></a>
+											<h3>Mallard evening flight in</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/25.jpg" class="image"><img src="gallery1/25.jpg" alt="" /></a>
+											<h3>Crow</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/26.jpg" class="image"><img src="gallery1/26.jpg" alt="" /></a>
+											<h3>Barn Owl</h3>
+											<p></p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/27.jpg" class="image"><img src="gallery1/27.jpg" alt="" /></a>
+											<h3>Rabbit’s hard times</h3>
+											<p>Watercolour</p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/28.jpg" class="image"><img src="gallery1/28.jpg" alt="" /></a>
+											<h3>Sheep sheltering</h3>
+											<p>Watercolour</p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/29.jpg" class="image"><img src="gallery1/29.jpg" alt="" /></a>
+											<h3>Kingfisher</h3>
+											<p>Watercolour</p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/30.jpg" class="image"><img src="gallery1/30.jpg" alt="" /></a>
+											<h3>Pike after lure</h3>
+											<p>Acrylic</p>
+
+										</article>
+										</article>
+										<article class="work-item">
+											<a href="gallery1/31.jpg" class="image"><img src="gallery1/31.jpg" alt="" /></a>
+											<h3>Grey Squirrel</h3>
+											<p>Watercolour</p>
+
+										</article>
 
 									</div>
 								</section>
