--- a/galleries/gallery6_images.html
+++ b/galleries/gallery6_images.html
@@ -1,3 +1,4 @@
+<div class="posts">
 										<article class="work-item">
 											<a href="gallery6/01.jpg" class="image"><img src="gallery6/01.jpg" alt="" /></a>
 											<h3>Hare</h3>
@@ -40,3 +41,4 @@
 											<p>Watercolour + Info about painting</p>
 
 										</article>
+</div>
