--- a/galleries/gallery6_images.html
+++ b/galleries/gallery6_images.html
@@ -1,4 +1,10 @@
-<div class="posts">
+
+								<section id="two">
+									<header class="major">
+										<h2>Gallery 6</h2>
+									</header>
+
+									<div class="posts">
 										<article class="work-item">
 											<a href="gallery6/01.jpg" class="image"><img src="gallery6/01.jpg" alt="" /></a>
 											<h3>Hare</h3>
@@ -41,4 +47,6 @@
 											<p>Watercolour + Info about painting</p>
 
 										</article>
-</div>
+									</div>
+								</section>
+								
