--- a/galleries/gallery6.html
+++ b/galleries/gallery6.html
@@ -69,12 +69,13 @@ function includeHTML() {
 
 							<!-- Section -->
 						
-
+								<section id="two">
 									<div w3-include-html="gallery6_images.html"></div> 
 
 									<script>
 										includeHTML();
 									</script>
+								</seection>
 
 						</div>
 					</div>
