--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<h2> Press on image or link to view gallery</h2>
 									<div class="posts">
 										<article>
-											<a href="galleries/gallery1.html" class="image"><img src="images/01.jpg" alt="" /></a>
+											<a href="gallery1/gallery1.html" class="image"><img src="images/01.jpg" alt="" /></a>
 											<h3>Wildlife Gallery</h3>
 											<p>Wild animals and pets painted in a range of different mediums. </p>
 											<ul class="actions">
@@ -72,7 +72,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="galleries/gallery2.html" class="image"><img src="images/02.jpg" alt="" /></a>
+											<a href="gallery2/gallery2.html" class="image"><img src="images/02.jpg" alt="" /></a>
 											<h3>Landscape Gallery</h3>
 											<p>Sceneries of the UK and France.</p>
 											<ul class="actions">
@@ -80,7 +80,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="galleries/gallery3.html" class="image"><img src="images/03.jpg" alt="" /></a>
+											<a href="gallery3/gallery3.html" class="image"><img src="images/03.jpg" alt="" /></a>
 											<h3>Pastels Gallery</h3>
 											<p>Collection of artwork produced using pastels.</p>
 											<ul class="actions">
@@ -88,7 +88,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="galleries/gallery4.html" class="image"><img src="images/04.jpg" alt="" /></a>
+											<a href="gallery4/gallery4.html" class="image"><img src="images/04.jpg" alt="" /></a>
 											<h3>Railway Gallery</h3>
 											<p>Paintings of steam trains.</p>
 											<ul class="actions">
@@ -96,7 +96,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="galleries/gallery5.html" class="image"><img src="images/05.jpg" alt="" /></a>
+											<a href="gallery5/gallery5.html" class="image"><img src="images/05.jpg" alt="" /></a>
 											<h3>Gallery 5</h3>
 											<p>Info about Gallery</p>
 											<ul class="actions">
@@ -104,7 +104,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="galleries/gallery6.html" class="image"><img src="images/06.jpg" alt="" /></a>
+											<a href="gallery6/gallery6.html" class="image"><img src="images/06.jpg" alt="" /></a>
 											<h3>Gallery 6</h3>
 											<p>Info about Gallery</p>
 											<ul class="actions">
@@ -135,12 +135,12 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-												<li><a href="galleries/gallery1.html">Wildlife Gallery</a></li>
-												<li><a href="galleries/gallery2.html">Landscape Gallery</a></li>
-												<li><a href="galleries/gallery3.html">Pastels Gallery</a></li>
-												<li><a href="galleries/gallery4.html">Railway Gallery</a></li>
-												<li><a href="galleries/galleries/gallery5.html">Gallery 5</a></li>
-												<li><a href="galleries/galleries/gallery6.html">Gallery 6</a></li>
+												<li><a href="gallery1/gallery1.html">Wildlife Gallery</a></li>
+												<li><a href="gallery2/gallery2.html">Landscape Gallery</a></li>
+												<li><a href="gallery3/gallery3.html">Pastels Gallery</a></li>
+												<li><a href="gallery4/gallery4.html">Railway Gallery</a></li>
+												<li><a href="gallery5/galleries/gallery5.html">Gallery 5</a></li>
+												<li><a href="gallery6/galleries/gallery6.html">Gallery 6</a></li>
 									</ul>
 								</nav>
 
