--- a/gallery4/gallery4_images.html
+++ b/gallery4/gallery4_images.html
@@ -7,12 +7,12 @@
 											<a href="gallery4/01.jpg" class="image"><img src="gallery4/01.jpg" alt="" /></a>
 											<h3>Steam train</h3>
 											<p></p>
-
 										</article>
+
 										<article class="work-item">
 											<a href="gallery4/02.jpg" class="image"><img src="gallery4/02.jpg" alt="" /></a>
 											<h3>Steam train</h3>
 											<p></p>
-
-	
+										</article>
+									</div>
 								</section>
