--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 											<h1>About me</h1>
 											<!-- <p>A free and fully responsive site template</p> -->
 										</header>
-										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). I began by painting in watercolour but later progressed to using oils and pastel and more recently mixed media. Passionate about the outdoors and wildlife these form the subjects of most of my paintings.</p>
+										<p>Born in Yorkshire, I graduated from Reigate School of Art with a BA (Hons). I began by painting in watercolour but later progressed to using oil and pastel and more recently mixed media. Passionate about the outdoors and wildlife these form the subjects of most of my paintings.</p>
 
 <p>My reputation as a lanscape and wildlife artist has led to my work being exhibited widely at galleries across the UK including London as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
 
