--- a/gallery4/gallery4_images.html
+++ b/gallery4/gallery4_images.html
@@ -8,11 +8,50 @@
 											<h3>Steam train</h3>
 											<p></p>
 										</article>
-
 										<article class="work-item">
 											<a href="gallery4/02.jpg" class="image"><img src="gallery4/02.jpg" alt="" /></a>
 											<h3>Steam train</h3>
 											<p></p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/03.jpg" class="image"><img src="gallery4/03.jpg" alt="" /></a>
+											<h3>A1/1 class Great Northern about to leave York station</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/04.jpg" class="image"><img src="gallery4/04.jpg" alt="" /></a>
+											<h3>Ash was always a problem</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/05.jpg" class="image"><img src="gallery4/05.jpg" alt="" /></a>
+											<h3>Chrome guards whistle</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/06.jpg" class="image"><img src="gallery4/06.jpg" alt="" /></a>
+											<h3>V2 class 2-6-2 Green Arrow of the Eastern Region</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/07.jpg" class="image"><img src="gallery4/07.jpg" alt="" /></a>
+											<h3>Walking across signal gantry to check lights</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/08.jpg" class="image"><img src="gallery4/08.jpg" alt="" /></a>
+											<h3>Britannia pacific Iron Duke</h3>
+											<p>Pen and ink</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/09.jpg" class="image"><img src="gallery4/09.jpg" alt="" /></a>
+											<h3>Coming to a stop at crossing gates</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/10.jpg" class="image"><img src="gallery4/10.jpg" alt="" /></a>
+											<h3>BR standard on the Somerset and Dorset line</h3>
+											<p>Watercolour</p>
 										</article>
 									</div>
 								</section>
