--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Philip Allan Murphy </strong> Artist</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -68,7 +68,7 @@
 											<h3>Wildlife Gallery</h3>
 											<p>Wild animals and pets painted in a range of different mediums. </p>
 											<ul class="actions">
-												<li><a href="galleries/gallery1.html" class="button">More</a></li>
+												<li><a href="gallery1/gallery1.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -76,7 +76,7 @@
 											<h3>Landscape Gallery</h3>
 											<p>Sceneries of the UK and France.</p>
 											<ul class="actions">
-												<li><a href="galleries/gallery2.html" class="button">More</a></li>
+												<li><a href="gallery2/gallery2.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -84,7 +84,7 @@
 											<h3>Pastels Gallery</h3>
 											<p>Collection of artwork produced using pastels.</p>
 											<ul class="actions">
-												<li><a href="galleries/gallery3.html" class="button">More</a></li>
+												<li><a href="gallery3/gallery3.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -92,7 +92,7 @@
 											<h3>Railway Gallery</h3>
 											<p>Paintings of steam trains.</p>
 											<ul class="actions">
-												<li><a href="galleries/gallery4.html" class="button">More</a></li>
+												<li><a href="gallery4/gallery4.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -100,7 +100,7 @@
 											<h3>Gallery 5</h3>
 											<p>Info about Gallery</p>
 											<ul class="actions">
-												<li><a href="galleries/gallery5.html" class="button">More</a></li>
+												<li><a href="gallery5/gallery5.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -108,7 +108,7 @@
 											<h3>Gallery 6</h3>
 											<p>Info about Gallery</p>
 											<ul class="actions">
-												<li><a href="galleries/gallery6.html" class="button">More</a></li>
+												<li><a href="gallery6/gallery6.html" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
@@ -154,6 +154,7 @@
 									<p>Please contact me to leave comments or if you would like to purchase one of my paintings</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+										<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
 										<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li> -->
