--- a/gallery4/gallery4.html
+++ b/gallery4/gallery4.html
@@ -10,40 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
-
-
-<!-- Include image link -->
-		
-<script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  /*loop through a collection of all HTML elements:*/
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
-    /*search for elements with a certain atrribute:*/
-    file = elmnt.getAttribute("w3-include-html");
-    if (file) {
-      /*make an HTTP request using the attribute value as the file name:*/
-      xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if (this.readyState == 4) {
-          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-          /*remove the attribute, and call this function once more:*/
-          elmnt.removeAttribute("w3-include-html");
-          includeHTML();
-        }
-      }      
-      xhttp.open("GET", file, true);
-      xhttp.send();
-      /*exit the function:*/
-      return;
-    }
-  }
-};
-</script>
-
 	</head>
 	<body class="is-preload">
 
@@ -72,11 +38,61 @@ function includeHTML() {
 						
 
 								<section id="two">
-										<div w3-include-html="gallery4_images.html"></div> 
-
-									<script>
-										includeHTML();
-									</script>
+									<header class="major">
+										<h2>Railway Gallery</h2>
+									</header>
+									<div class="posts">
+										<article class="work-item">
+											<a href="gallery4/01.jpg" class="image"><img src="gallery4/01.jpg" alt="" /></a>
+											<h3>Steam train</h3>
+											<p></p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/02.jpg" class="image"><img src="gallery4/02.jpg" alt="" /></a>
+											<h3>Steam train</h3>
+											<p></p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/03.jpg" class="image"><img src="gallery4/03.jpg" alt="" /></a>
+											<h3>A1/1 class Great Northern about to leave York station</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/04.jpg" class="image"><img src="gallery4/04.jpg" alt="" /></a>
+											<h3>Ash was always a problem</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/05.jpg" class="image"><img src="gallery4/05.jpg" alt="" /></a>
+											<h3>Chrome guards whistle</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/06.jpg" class="image"><img src="gallery4/06.jpg" alt="" /></a>
+											<h3>V2 class 2-6-2 Green Arrow of the Eastern Region</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/07.jpg" class="image"><img src="gallery4/07.jpg" alt="" /></a>
+											<h3>Walking across signal gantry to check lights</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/08.jpg" class="image"><img src="gallery4/08.jpg" alt="" /></a>
+											<h3>Britannia pacific Iron Duke</h3>
+											<p>Pen and ink</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/09.jpg" class="image"><img src="gallery4/09.jpg" alt="" /></a>
+											<h3>Coming to a stop at crossing gates</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/10.jpg" class="image"><img src="gallery4/10.jpg" alt="" /></a>
+											<h3>BR standard on the Somerset and Dorset line</h3>
+											<p>Watercolour</p>
+										</article>
+									</div>
 								</section>
 
 						</div>
