--- a/gallery1/gallery1.html
+++ b/gallery1/gallery1.html
@@ -24,11 +24,7 @@
 								<header id="header">
 									<a href="../index.html" class="logo"><strong>Philip Allan Murphy </strong> Artist</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -243,9 +239,10 @@
 									<p>Please contact me to leave comments or if you would like to purchase one of my paintings</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
+										<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
+										<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										Nashville, TN 00000-0000</li> -->
 									</ul>
 								</section>
 
