--- a/gallery4/gallery4.html
+++ b/gallery4/gallery4.html
@@ -24,11 +24,11 @@
 								<header id="header">
 									<a href="../index.html" class="logo"><strong>Philip Allan Murphy </strong> Artist</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -92,6 +92,51 @@
 											<h3>BR standard on the Somerset and Dorset line</h3>
 											<p>Watercolour</p>
 										</article>
+										<article class="work-item">
+											<a href="gallery4/11.jpg" class="image"><img src="gallery4/11.jpg" alt="" /></a>
+											<h3>Coaling by hand</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/12.jpg" class="image"><img src="gallery4/12.jpg" alt="" /></a>
+											<h3>Clear road ahead</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/13.jpg" class="image"><img src="gallery4/13.jpg" alt="" /></a>
+											<h3>Dirty work, boiler clean out</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/14.jpg" class="image"><img src="gallery4/14.jpg" alt="" /></a>
+											<h3>Midland Region, Drummond 2f goods on turntable</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/15.jpg" class="image"><img src="gallery4/15.jpg" alt="" /></a>
+											<h3>L.N.E.R Atlantic express engine</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/16.jpg" class="image"><img src="gallery4/16.jpg" alt="" /></a>
+											<h3>Midland Black Five</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/17.jpg" class="image"><img src="gallery4/17.jpg" alt="" /></a>
+											<h3>Firing a locomotive was hard work</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/18.jpg" class="image"><img src="gallery4/18.jpg" alt="" /></a>
+											<h3>Bristol Temple Meads station</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery4/19.jpg" class="image"><img src="gallery4/19.jpg" alt="" /></a>
+											<h3>Double headed express over the Mendips</h3>
+											<p>Watercolour</p>
+										</article>
 									</div>
 								</section>
 
@@ -135,9 +180,10 @@
 									<p>Please contact me to leave comments or if you would like to purchase one of my paintings</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
+										<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
+										<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										Nashville, TN 00000-0000</li> -->
 									</ul>
 								</section>
 
