--- a/gallery4/gallery4.html
+++ b/gallery4/gallery4.html
@@ -24,10 +24,7 @@
 								<header id="header">
 									<a href="../index.html" class="logo"><strong>Philip Allan Murphy </strong> Artist</a>
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
+										<li><a href="mailto:philalan@mac.com" class="icon solid fa-envelope"><span class="label">philalan@mac.com</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</header>
@@ -165,7 +162,7 @@
 												<li><a href="../gallery2/gallery2.html">Landscape Gallery</a></li>
 												<li><a href="../gallery3/gallery3.html">Pastels Gallery</a></li>
 												<li><a href="gallery4.html">Railway Gallery</a></li>
-												<li><a href="../gallery5/gallery5.html">Gallery 5</a></li>
+												<li><a href="../gallery5/gallery5.html">Humanity Gallery</a></li>
 												<li><a href="../gallery6/gallery6.html">Gallery 6</a></li>
 									</ul>
 								</nav>
@@ -179,7 +176,7 @@
 									</header>
 									<p>Please contact me to leave comments or if you would like to purchase one of my paintings</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:philalan@mac.com">philalan@mac.com</a></li>
 										<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
 										<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
