--- a/gallery5/gallery5.html
+++ b/gallery5/gallery5.html
@@ -24,6 +24,7 @@
 								<header id="header">
 									<a href="../index.html" class="logo"><strong>Philip Allan Murphy </strong> Artist</a>
 									<ul class="icons">
+										<li><a href="mailto:philalan@mac.com" class="icon solid fa-envelope"><span class="label">philalan@mac.com</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</header>
@@ -40,38 +41,83 @@
 									<div class="posts">
 										<article class="work-item">
 											<a href="gallery5/01.jpg" class="image"><img src="gallery5/01.jpg" alt="" /></a>
-											<h3>Hare</h3>
-											<p>Oil + Info about painting</p>
+											<h3>Devon farmer</h3>
+											<p>Watercolour</p>
 										</article>
 										<article class="work-item">
 											<a href="gallery5/02.jpg" class="image"><img src="gallery5/02.jpg" alt="" /></a>
-											<h3>Stream</h3>
-											<p>Pastel + Info about painting</p>
+											<h3></h3>
+											<p>Watercolour</p>
 										</article>
 										<article class="work-item">
 											<a href="gallery5/03.jpg" class="image"><img src="gallery5/03.jpg" alt="" /></a>
-											<h3>Fox In Snow</h3>
-											<p>Oil + Info about painting</p>
+											<h3>Ploughing up a unexploded bomb</h3>
+											<p>Watercolour</p>
 										</article>
 										<article class="work-item">
 											<a href="gallery5/04.jpg" class="image"><img src="gallery5/04.jpg" alt="" /></a>
-											<h3>Clouds Over The Monument</h3>
-											<p>Acrylic + Info about painting</p>
+											<h3>Out front</h3>
+											<p>Watercolour</p>
 										</article>
 										<article class="work-item">
 											<a href="gallery5/05.jpg" class="image"><img src="gallery5/05.jpg" alt="" /></a>
-											<h3>Horse</h3>
-											<p>Oil + Info about painting</p>
+											<h3></h3>
+											<p>Watercolour</p>
 										</article>
 										<article class="work-item">
 											<a href="gallery5/06.jpg" class="image"><img src="gallery5/06.jpg" alt="" /></a>
-											<h3>River Landscape</h3>
-											<p>Watercolour + Info about painting</p>
+											<h3>Old French farmer</h3>
+											<p>Acrylic</p>
 										</article>
 										<article class="work-item">
 											<a href="gallery5/07.jpg" class="image"><img src="gallery5/07.jpg" alt="" /></a>
-											<h3>Road Landscape</h3>
-											<p>Watercolour + Info about painting</p>
+											<h3>Gentle giant</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/08.jpg" class="image"><img src="gallery5/08.jpg" alt="" /></a>
+											<h3></h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/09.jpg" class="image"><img src="gallery5/09.jpg" alt="" /></a>
+											<h3>Dredging for Oysters</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/10.jpg" class="image"><img src="gallery5/10.jpg" alt="" /></a>
+											<h3>A pint a the end of the day</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/11.jpg" class="image"><img src="gallery5/11.jpg" alt="" /></a>
+											<h3>Fred Bayfield, Gamekeeper</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/12.jpg" class="image"><img src="gallery5/12.jpg" alt="" /></a>
+											<h3>Hay making</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/13.jpg" class="image"><img src="gallery5/13.jpg" alt="" /></a>
+											<h3>Keeping a scythe sharp</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/14.jpg" class="image"><img src="gallery5/14.jpg" alt="" /></a>
+											<h3>Cigarette break</h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/15.jpg" class="image"><img src="gallery5/15.jpg" alt="" /></a>
+											<h3></h3>
+											<p>Watercolour</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/16.jpg" class="image"><img src="gallery5/16.jpg" alt="" /></a>
+											<h3>Too far for a shot</h3>
+											<p>Watercolour</p>
 										</article>
 									</div>
 								</section>
@@ -115,7 +161,7 @@
 									</header>
 									<p>Please contact me to leave comments or if you would like to purchase one of my paintings</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:philalan@mac.com">philalan@mac.com</a></li>
 										<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
 										<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
