--- a/gallery5/gallery5.html
+++ b/gallery5/gallery5.html
@@ -147,7 +147,7 @@
 												<li><a href="../gallery2/gallery2.html">Landscape Gallery</a></li>
 												<li><a href="../gallery3/gallery3.html">Pastels Gallery</a></li>
 												<li><a href="../gallery4/gallery4.html">Railway Gallery</a></li>
-												<li><a href="gallery5.html">Gallery 5</a></li>
+												<li><a href="gallery5.html">Humanity Gallery 5</a></li>
 												<li><a href="../gallery6/gallery6.html">Gallery 6</a></li>
 									</ul>
 								</nav>
