--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<article>
 											<a href="gallery2/gallery2.html" class="image"><img src="images/02.jpg" alt="" /></a>
 											<h3>Landscape Gallery</h3>
-											<p>Sceneries of the UK and France.</p>
+											<p>Sceneries of the outdoors from my travels around the UK and France.</p>
 											<ul class="actions">
 												<li><a href="gallery2/gallery2.html" class="button">More</a></li>
 											</ul>
@@ -91,7 +91,7 @@
 										<article>
 											<a href="gallery4/gallery4.html" class="image"><img src="images/04.jpg" alt="" /></a>
 											<h3>Railway Gallery</h3>
-											<p>Paintings of steam trains.</p>
+											<p>Paintings of steam trains and railway related scenes.</p>
 											<ul class="actions">
 												<li><a href="gallery4/gallery4.html" class="button">More</a></li>
 											</ul>
@@ -99,7 +99,7 @@
 										<article>
 											<a href="gallery5/gallery5.html" class="image"><img src="images/05.jpg" alt="" /></a>
 											<h3>Humanity Gallery</h3>
-											<p>Info about Gallery</p>
+											<p>Protraits and paintings of people in action.</p>
 											<ul class="actions">
 												<li><a href="gallery5/gallery5.html" class="button">More</a></li>
 											</ul>
