--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<article>
 											<a href="gallery5/gallery5.html" class="image"><img src="images/05.jpg" alt="" /></a>
 											<h3>Humanity Gallery</h3>
-											<p>Protraits and paintings of people in action.</p>
+											<p>Portraits and paintings of people living their lives.</p>
 											<ul class="actions">
 												<li><a href="gallery5/gallery5.html" class="button">More</a></li>
 											</ul>
